--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/_general.css">
+	<link rel="stylesheet" type="text/css" href="css/general.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/_effects-elem.css">
-	<link rel="stylesheet" type="text/css" href="css/_mobile.css">
-	<link rel="stylesheet" type="text/css" href="css/_burger-menu.css">
+	<link rel="stylesheet" type="text/css" href="css/effects-elem.css">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/burger-menu.css">
 	<title>BeeCloud</title>
 </head>
 <body>
